@@ -1,6 +1,8 @@
 package StreamAPI;
 
 
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -9,7 +11,8 @@ public class StreamMain{
     public static void main(String[] args) {
         //create a list n filter all even no. from list
         //list are immutale
-        List<Integer> list1=List.of(2,4,5,6,7,8);
+        List<Integer> list1 = new ArrayList<>(Arrays.asList(2, 4, 5, 6, 7, 8));
+
         System.out.println(list1);
 
         //old method
@@ -28,7 +31,7 @@ public class StreamMain{
         System.out.println(newstremlist);
 
         //examples by sir
-        List<Integer> nums = List.of(120, 390, 48, 38, 120, 392, 48, 38, 22, 382, 572, 7772, 234);
+        List<Integer> nums = new ArrayList<>(Arrays.asList(120, 390, 48, 38, 120, 392, 48, 38, 22, 382, 572, 7772, 234));
 
         // first 5 of the numbers:
         nums.stream()
